SCRUM-207 refact: closetService 카테고리제이션 클린코딩